
public static class AnimationStringList 
{
    public static string Horizontal = "Horizontal";
    public static string Vertical = "Vertical";
    public static string Roll = "Roll_Forward_01";
    public static string BackStep = "BackStep";
    public static string Jump = "Main_Jump_01";
    public static string isGrounded = "isGrounded";
    public static string SwitchRightWeapon = "straight_sword_main_equip_R_01";
}
